--- a/style.css
+++ b/style.css
@@ -128,7 +128,21 @@ body{
 
 .d-2{
     height: 60px;
-    font-size: 12px;
+    font-size: 16px;
     border-top: 2px solid black;
     padding-left: 10px;
+}
+.aviso--grande{
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+}
+.aviso--gigante{
+    font-size: 70px;
+    font-weight: bold;
+    text-align: center;
+    flex: 1;
+    justify-content: center;
+    display: flex;
+    align-items: center;
 }
